--- a/repos.yaml
+++ b/repos.yaml
@@ -15,6 +15,12 @@
     merges:
         - onestein 15.0
 
+./addons-pre-oca:
+    remotes:
+        onestein: git@github.com:onesteinbv/addons-pre-oca.git
+    merges:
+        - onestein 15.0
+
 ./addons-customer-nextcloud:
     remotes:
         onestein: git@github.com:onesteinbv/addons-customer-nextcloud.git
