[UPD] repos.yaml, buildout.cfg and package.txt

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,6 +9,7 @@ eggs +=
     unidecode
     python-dateutil
     phonenumbers
+    astor
 
 # add your merges and addons here
 addons +=
@@ -16,9 +17,7 @@ addons +=
     git https://github.com/odoo/design-themes parts/design-themes ${odoo:release}
 # onestein
     git https://github.com/onesteinbv/addons-generic parts/addons-generic 3c66cec5a887075b723a5edccae4482cde2f8bbc branch=${odoo:release}
-    git https://github.com/onesteinbv/addons-pre-oca parts/addons-pre-oca ${odoo:release}
 # third-party
-    git https://github.com/onesteinbv/addons-third-party parts/addons-third-party 9d3e45c894b06a35d30fc98018751b00f899511c branch=${odoo:release}
     git https://github.com/mollie/mollie-odoo parts/mollie-odoo 5737bbe16e817408b1ca7db3c648345b3893c4db branch=${odoo:release}
 # oca
     git https://github.com/onesteinbv/addons-oca parts/oca ${odoo:release}
