--- a/repos.yaml
+++ b/repos.yaml
@@ -8,6 +8,8 @@
             remote: odoo
             ref: "cedd0603a24aa0c0e6716c2e0f49e89c870eae04"
             depth: 1000
+        - odoo refs/pull/123626/head
+
 # onestein
 ./addons-generic:
     remotes:
