[FIX] repos.yaml: patch for account_reconcile_oca regression

--- a/repos.yaml
+++ b/repos.yaml
@@ -8,6 +8,9 @@
             remote: odoo
             ref: "cedd0603a24aa0c0e6716c2e0f49e89c870eae04"
             depth: 1000
+        -
+            remote: odoo
+            ref: refs/pull/123626/head
 
 # onestein
 ./addons-generic:
