Add https://github.com/odoo/odoo/pull/140913 to build

--- a/repos.yaml
+++ b/repos.yaml
@@ -8,6 +8,7 @@
             remote: odoo
             ref: "ef6f903dac4d1ca94d2c480e7f93239897397d1d"
             depth: 1000
+        - odoo refs/pull/140913/head
 
 # onestein
 ./addons-generic:
