--- a/repos.yaml
+++ b/repos.yaml
@@ -6,8 +6,7 @@
     merges:
         -
             remote: odoo
-            ref: "ef6f903dac4d1ca94d2c480e7f93239897397d1d"
-            depth: 1000
+            ref: ef6f903dac4d1ca94d2c480e7f93239897397d1d
         - odoo refs/pull/140913/head
 
 # onestein
