[FIX] Pre-commit - Disabled manifest website checking

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,8 +46,8 @@ repos:
     hooks:
       # update the NOT INSTALLABLE ADDONS section above
       - id: oca-update-pre-commit-excluded-addons
-      - id: oca-fix-manifest-website
-        args: ["https://www.onestein.eu"]
+      # - id: oca-fix-manifest-website
+      #   args: ["https://www.onestein.eu"]
       # - id: oca-gen-addon-readme
       #   args:
       #     - --addons-dir=.
