--- a/repos.yaml
+++ b/repos.yaml
@@ -42,3 +42,12 @@
         onestein: git@github.com:onesteinbv/addons-third-party.git
     merges:
         - onestein 16.0
+
+# ProjectManagement
+./ProjectManagement:
+    defaults:
+        depth: 20
+    remotes:
+        onestein: git@github.com:onesteinbv/ProjectManagement.git
+    merges:
+        - onestein 16.0
