--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,6 +46,10 @@ jobs:
         run: pip3 install -r requirements.txt
       - name: Pack
         run: python3 scripts/pack.py --location . --package-file "package.txt" --destination package
+      - name: Initialize test db
+        run: oca_init_test_database
+        env:
+          ADDONS_DIR: package
       - name: Run tests
         run: oca_run_tests
         env:
