--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,8 +13,6 @@ jobs:
     runs-on: ubuntu-22.04
     container: docker.io/onestein/odoo-ci:16.0
     name: Odoo
-    strategy:
-      fail-fast: false
     services:
       postgres:
         image: postgres:12.0
@@ -60,6 +58,8 @@ jobs:
         env:
           ADDONS_DIR: package
           INCLUDE: partner_firstname  # Test one 1 module
+      - name: Prepare report
+        run: coverage xml -o report.xml --data-file .coverage
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
         env:
