--- a/repos.yaml
+++ b/repos.yaml
@@ -53,4 +53,4 @@
     remotes:
         onestein: git@github.com:onesteinbv/ProjectManagement.git
     merges:
-        - onestein 16.0
+        - onestein 4bbde5b03e9f51f0093d3c00ad0e6d739cdf77a5
