Ignore all other modules except the ones in this repo for the codecov report All modules will still be tested for regression but just the codecov report will be on the modules in this repo

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,2 +1,7 @@
 ignore:
-  - "package"
+  - "package/"
+  - "odoo/"
+  - "oca/"
+  - "design-themes/"
+  - "ProjectManagement/"
+  - "addons-generic/"
