--- a/codecov.yml
+++ b/codecov.yml
@@ -1,7 +1,7 @@
 ignore:
-  - "package/"
-  - "odoo/"
-  - "oca/"
-  - "design-themes/"
-  - "ProjectManagement/"
-  - "addons-generic/"
+  - "package"
+  - "odoo"
+  - "oca"
+  - "design-themes"
+  - "addons-generic"
+  - "ProjectManagement"
