Ignore all other modules except the ones in this repo for the codecov report All modules will still be tested for regression but just the codecov report will be on the modules in this repo

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -64,6 +64,8 @@ jobs:
         run: coverage xml -o report.xml --data-file .coverage
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
+        with:
+          files: ./report.xml
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       - name: Run scripts
