--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -63,11 +63,12 @@ jobs:
       - name: Prepare report
         run: coverage xml -o coverage.xml --data-file .coverage
       - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
         with:
           files: ./coverage.xml
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
+          verbose: true
       - name: Run scripts
         env:
           DOMAIN: https://onestein.nl
