--- a/codecov.yml
+++ b/codecov.yml
@@ -1,5 +1,7 @@
 codecov:
   disable_default_path_fixes: true
+fixes:
+  - "__w/addons-container/addons-container/::"
 ignore:
   - "package/**/*"
   - "odoo/**/*"
