--- a/codecov.yml
+++ b/codecov.yml
@@ -1,2 +1,8 @@
-fixes:
-  - "package/::"
+ignore:
+  - "package/**/*"
+  - "odoo/**/*"
+  - "oca/**/*"
+  - "design-themes/**/*"
+  - "addons-generic/**/*"
+  - "addons-third-party/**/*"
+  - "ProjectManagement/**/*"
